--- a/test/expected/topcoat-textarea.css
+++ b/test/expected/topcoat-textarea.css
@@ -14,8 +14,8 @@ limitations under the License.
 */
 
 /*
- TopCoat Textarea
- ------------------------
+Textarea
+------------------------
 
     <textarea class="topcoat-textarea" rows="6" cols="36" placeholder="Textarea"></textarea>
 
@@ -26,14 +26,17 @@ limitations under the License.
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 10px 20px;
-  border-radius: 6px;
+  padding: 0 1.16rem;
+  border-radius: 3px;
   margin: 5px;
-  font: 1em "Source Sans", helvetica, arial, sans-serif;
+  font: var-font;
   font-weight: 200;
   line-height: 2rem;
   resize: none;
   outline: none;
+  padding: 0 1.16rem;
+  border-radius: 3px;
+  line-height: 2rem;
   border: 1px solid #a5a8a8;
   background-color: #eff1f1;
   box-shadow: inset 0 1px rgba(0,0,0,0.12);
@@ -45,14 +48,14 @@ limitations under the License.
   color: #454545;
 }
 /*
-Topcoat Large Textarea
- ------------------------
+Large Textarea
+------------------------
 
-	<textarea class="topcoat-textarea--large" rows="6" cols="36" placeholder="Textarea"></textarea>
+    <textarea class="topcoat-textarea--large" rows="6" cols="36" placeholder="Textarea"></textarea>
 
 */
 .topcoat-textarea--large {
-  font: 1.3rem "Source Sans", helvetica, arial, sans-serif;
-  font-weight: 200;
+  font-size: 1.3rem;
+  font-weight: 400;
   line-height: 1.5em;
 }
