--- a/test/fixtures/variables/variables.styl
+++ b/test/fixtures/variables/variables.styl
@@ -1,10 +1,10 @@
 /* Topcoat textarea */
-var-font 		= 1em "Source Sans", helvetica, arial, sans-serif
-var-font--large = 1.3rem "Source Sans", helvetica, arial, sans-serif
-var-font-weight = 200
 
 var-line-height = 2rem
 var-line-height--large = 1.5em
+var-font-weight = 200
+var-font-size--large = 1.3rem
+var-font-weight--large = 400
 
 var-border		= 1px solid #a5a8a8
 var-background-color = #eff1f1
@@ -14,5 +14,5 @@ var-background--focus = #ffffff
 var-box-shadow 	= inset 0 1px rgba(0,0,0,.12)
 
 var-margin = 5px
-var-padding = 10px 20px
-var-border-radius = 6px
+var-padding = 0 1.16rem
+var-border-radius = 3px
