--- a/css/topcoat-textarea-desktop-dark.css
+++ b/css/topcoat-textarea-desktop-dark.css
@@ -1,26 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  background: #dfe2e2;
-  color: #000;
-  font: 16px "Source Sans", helvetica, arial, sans-serif;
-  font-weight: 200;
-  text-rendering: optimizeLegibility;
-}
-@font-face {
-  font-family: "Source Sans";
-  src: url("../font/SourceSansPro-Regular.otf");
-}
-@font-face {
-  font-family: "Source Sans";
-  src: url("../font/SourceSansPro-Light.otf");
-  font-weight: 200;
-}
-@font-face {
-  font-family: "Source Sans";
-  src: url("../font/SourceSansPro-Semibold.otf");
-  font-weight: 600;
-}
 /**
 *
 * Copyright 2012 Adobe Systems Inc.;
@@ -57,36 +34,22 @@ body {
 */
 .topcoat-textarea,
 .topcoat-textarea--large {
-  box-sizing: border-box;
-  background-clip: padding-box;
-  padding: 0;
-  margin: 0;
-  font: inherit;
-  color: inherit;
-  background: transparent;
-  border: none;
-  vertical-align: top;
-  resize: none;
-  outline: none;
-  padding: 2rem;
-  font-size: 2.5rem;
+  padding: 1rem;
+  font-size: 1rem;
   font-weight: 200;
-  border-radius: 6px;
-  line-height: 3rem;
-  border: 1px solid #a5a8a8;
-  background-color: #e5e9e8;
-  box-shadow: inset 0 1px rgba(0,0,0,0.12);
-  color: #454545;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  line-height: 2rem;
+  border: 1px solid rgba(0,0,0,0.36);
+  background-color: #595b5b;
+  -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.18);
+  box-shadow: inset 0 1px rgba(0,0,0,0.18);
+  color: #c6c8c8;
 }
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
   background-color: #fff;
   color: #000;
-}
-.topcoat-textarea:disabled {
-  opacity: 0.3;
-  cursor: default;
-  pointer-events: none;
 }
 /* topdoc
   name: Large Textarea
@@ -106,11 +69,6 @@ body {
     - textarea
 */
 .topcoat-textarea--large {
-  font-size: 3rem;
-  line-height: 4rem;
-}
-.topcoat-textarea--large:disabled {
-  opacity: 0.3;
-  cursor: default;
-  pointer-events: none;
+  font-size: 1.3rem;
+  line-height: 2.6rem;
 }
