--- a/test/expected/topcoat-textarea-desktop-dark.css
+++ b/test/expected/topcoat-textarea-desktop-dark.css
@@ -15,7 +15,6 @@
 * limitations under the License.
 *
 */
-@import textarea
 /* topdoc
   name: Textarea
   description: A whole area, just for text.
@@ -33,22 +32,25 @@
     - input
     - textarea
 */
-.topcoat-textarea
-    @extend .textarea
-    padding var-padding--container
-    font-size var-font-size--textarea
-    font-weight var-font-weight
-    border-radius var-border-radius
-    line-height var-line-height
-    border var-border
-    background-color var-background-color
-    box-shadow var-box-shadow--down
-    color var-color
-
-.topcoat-textarea:focus
-    background-color var-background-color--focus
-    color var-color--focus
-
+.topcoat-textarea,
+.topcoat-textarea--large {
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: 200;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  line-height: 2rem;
+  border: 1px solid rgba(0,0,0,0.36);
+  background-color: #595b5b;
+  -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.18);
+  box-shadow: inset 0 1px rgba(0,0,0,0.18);
+  color: #c6c8c8;
+}
+.topcoat-textarea:focus,
+.topcoat-textarea--large:focus {
+  background-color: #fff;
+  color: #000;
+}
 /* topdoc
   name: Large Textarea
   description: A whole area, just for text; now available in large.
@@ -66,11 +68,7 @@
     - input
     - textarea
 */
-
-.topcoat-textarea--large
-    @extends .topcoat-textarea
-    font-size var-font-size--textarea--large
-    line-height var-line-height--large
-
-.topcoat-textarea--large:focus
-    @extend .topcoat-textarea:focus
+.topcoat-textarea--large {
+  font-size: 1.3rem;
+  line-height: 2.6rem;
+}
