--- a/test/expected/topcoat-textarea-desktop-dark.css
+++ b/test/expected/topcoat-textarea-desktop-dark.css
@@ -15,6 +15,25 @@
 * limitations under the License.
 *
 */
+.textarea,
+.topcoat-textarea,
+.topcoat-textarea--large {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-background-clip: padding;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  background: transparent;
+  border: none;
+  vertical-align: top;
+  resize: none;
+  outline: none;
+}
 /* topdoc
   name: Textarea
   description: A whole area, just for text.
@@ -34,11 +53,11 @@
 .topcoat-textarea--large {
   padding: 1rem;
   font-size: 1rem;
-  font-weight: 200;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  line-height: 2rem;
-  border: 1px solid rgba(0,0,0,0.36);
+  font-weight: 400;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  line-height: 1.313rem;
+  border: 1px solid #303233;
   background-color: #595b5b;
   -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.18);
   box-shadow: inset 0 1px rgba(0,0,0,0.18);
@@ -46,8 +65,8 @@
 }
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #fff;
-  color: #000;
+  background-color: #646666;
+  color: #fff;
 }
 /* topdoc
   name: Large Textarea
@@ -66,5 +85,5 @@
 */
 .topcoat-textarea--large {
   font-size: 1.3rem;
-  line-height: 2.6rem;
+  line-height: 1.688rem;
 }
