--- a/src/topcoat-textarea.styl
+++ b/src/topcoat-textarea.styl
@@ -23,6 +23,9 @@
     :disabled: Disabled state
   markup:
     <textarea class="topcoat-textarea" rows="6" cols="36" placeholder="Textarea"></textarea>
+    <br>
+    <br>
+    <textarea class="topcoat-textarea" rows="6" cols="36" placeholder="Textarea" disabled></textarea>
   tags:
     - desktop
     - light
@@ -32,20 +35,36 @@
     - textarea
 */
 .topcoat-textarea
-    @extend .textarea
-    padding var-padding--container
-    font-size var-font-size--textarea
-    font-weight var-font-weight
-    border-radius var-border-radius
-    line-height var-line-height
-    border var-border
-    background-color var-background-color
-    box-shadow var-box-shadow--down
-    color var-color
+  @extend .textarea
+  padding var-padding--container
+  font-size var-font-size--textarea
+  font-weight var-font-weight
+  border-radius var-border-radius
+  line-height var-line-height
+  border var-border
+  background-color var-background-color--text-input
+  box-shadow var-box-shadow--down
+  color var-color
+  letter-spacing var-letter-spacing
 
 .topcoat-textarea:focus
-    background-color var-background-color--text-input--focus
-    color var-color--focus
+  background-color var-background-color--text-input--focus
+  color var-color--focus
+  border var-border--focus
+  box-shadow var-box-shadow--focus
+
+.topcoat-textarea:disabled
+  @extend .textarea:disabled
+
+.topcoat-textarea:disabled::-webkit-input-placeholder
+  color var-color--focus
+
+.topcoat-textarea:disabled::-moz-placeholder
+  color var-color--focus
+
+.topcoat-textarea:disabled:-ms-input-placeholder
+  color var-color--focus
+
 
 /* topdoc
   name: Large Textarea
@@ -54,6 +73,9 @@
     :disabled: Disabled state
   markup:
     <textarea class="topcoat-textarea--large" rows="6" cols="36" placeholder="Textarea"></textarea>
+    <br>
+    <br>
+    <textarea class="topcoat-textarea--large" rows="6" cols="36" placeholder="Textarea" disabled></textarea>
   tags:
     - desktop
     - light
@@ -64,9 +86,22 @@
 */
 
 .topcoat-textarea--large
-    @extends .topcoat-textarea
-    font-size var-font-size--textarea--large
-    line-height var-line-height--large
+  @extends .topcoat-textarea
+  font-size var-font-size--textarea--large
+  line-height var-line-height--large
 
 .topcoat-textarea--large:focus
-    @extend .topcoat-textarea:focus
+  @extend .topcoat-textarea:focus
+
+.topcoat-textarea--large:disabled
+  @extend .textarea:disabled
+  color var-color--focus
+
+.topcoat-textarea--large:disabled::-webkit-input-placeholder
+  color var-color--focus
+
+.topcoat-textarea--large:disabled::-moz-placeholder
+  color var-color--focus
+
+.topcoat-textarea--large:disabled:-ms-input-placeholder
+  color var-color--focus
