--- a/css/topcoat-textarea-mobile-light.css
+++ b/css/topcoat-textarea-mobile-light.css
@@ -15,14 +15,14 @@
 * limitations under the License.
 *
 */
+
 .textarea,
 .topcoat-textarea,
 .topcoat-textarea--large {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-background-clip: padding;
-  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
   background-clip: padding-box;
   padding: 0;
   margin: 0;
@@ -34,6 +34,7 @@
   resize: none;
   outline: none;
 }
+
 .textarea:disabled,
 .topcoat-textarea:disabled,
 .topcoat-textarea--large:disabled {
@@ -41,6 +42,7 @@
   cursor: default;
   pointer-events: none;
 }
+
 /* topdoc
   name: Textarea
   description: A whole area, just for text.
@@ -59,38 +61,43 @@
     - input
     - textarea
 */
+
 .topcoat-textarea,
 .topcoat-textarea--large {
   padding: 2rem;
   font-size: 2.5rem;
-  font-weight: 200;
-  -webkit-border-radius: 6px;
+  font-weight: 400;
   border-radius: 6px;
   line-height: 3rem;
-  border: 1px solid #a5a8a8;
-  background-color: #d3d7d7;
-  -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.12);
-  box-shadow: inset 0 1px rgba(0,0,0,0.12);
+  border: 1px solid #9daca9;
+  background-color: #fff;
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
   color: #454545;
   letter-spacing: 1px;
 }
+
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #edf1f1;
-  color: #000;
-  border: 1px solid #0940fd;
-  -webkit-box-shadow: 0 0 0 2px #6fb5f1;
-  box-shadow: 0 0 0 2px #6fb5f1;
+  background-color: #fff;
+  color: #454545;
+  border: 1px solid #0036ff;
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
 }
+
 .topcoat-textarea:disabled::-webkit-input-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea:disabled::-moz-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea:disabled:-ms-input-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 /* topdoc
   name: Large Textarea
   description: A whole area, just for text; now available in large.
@@ -109,19 +116,24 @@
     - input
     - textarea
 */
+
 .topcoat-textarea--large {
   font-size: 3rem;
   line-height: 4.375rem;
 }
+
 .topcoat-textarea--large:disabled {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea--large:disabled::-webkit-input-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea--large:disabled::-moz-placeholder {
-  color: #000;
+  color: #454545;
 }
+
 .topcoat-textarea--large:disabled:-ms-input-placeholder {
-  color: #000;
+  color: #454545;
 }
