--- a/src/topcoat-textarea.styl
+++ b/src/topcoat-textarea.styl
@@ -43,7 +43,7 @@
   line-height var-line-height
   border var-border
   background-color var-background-color--text-input
-  box-shadow var-box-shadow--down
+  box-shadow var-box-shadow--text-input
   color var-color
   letter-spacing var-letter-spacing
 
@@ -51,7 +51,7 @@
   background-color var-background-color--text-input--focus
   color var-color--focus
   border var-border--focus
-  box-shadow var-box-shadow--focus
+  box-shadow var-box-shadow--text-input, var-box-shadow--focus
 
 .topcoat-textarea:disabled
   @extend .textarea:disabled
