--- a/test/expected/topcoat-textarea-desktop-dark.css
+++ b/test/expected/topcoat-textarea-desktop-dark.css
@@ -15,14 +15,14 @@
 * limitations under the License.
 *
 */
+
 .textarea,
 .topcoat-textarea,
 .topcoat-textarea--large {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-background-clip: padding;
-  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
   background-clip: padding-box;
   padding: 0;
   margin: 0;
@@ -34,6 +34,7 @@
   resize: none;
   outline: none;
 }
+
 .textarea:disabled,
 .topcoat-textarea:disabled,
 .topcoat-textarea--large:disabled {
@@ -41,6 +42,7 @@
   cursor: default;
   pointer-events: none;
 }
+
 /* topdoc
   name: Textarea
   description: A whole area, just for text.
@@ -59,38 +61,43 @@
     - input
     - textarea
 */
+
 .topcoat-textarea,
 .topcoat-textarea--large {
   padding: 1rem;
   font-size: 1rem;
   font-weight: 400;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
   line-height: 1.313rem;
-  border: 1px solid #303233;
-  background-color: #404141;
-  -webkit-box-shadow: inset 0 1px rgba(0,0,0,0.18);
-  box-shadow: inset 0 1px rgba(0,0,0,0.18);
+  border: 1px solid #333434;
+  background-color: #454646;
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
   color: #c6c8c8;
   letter-spacing: 0;
 }
+
 .topcoat-textarea:focus,
 .topcoat-textarea--large:focus {
-  background-color: #646666;
+  background-color: #595b5b;
   color: #fff;
-  border: 1px solid #0940fd;
-  -webkit-box-shadow: 0 0 0 2px #6fb5f1;
-  box-shadow: 0 0 0 2px #6fb5f1;
+  border: 1px solid #0036ff;
+  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
+  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
 }
+
 .topcoat-textarea:disabled::-webkit-input-placeholder {
   color: #fff;
 }
+
 .topcoat-textarea:disabled::-moz-placeholder {
   color: #fff;
 }
+
 .topcoat-textarea:disabled:-ms-input-placeholder {
   color: #fff;
 }
+
 /* topdoc
   name: Large Textarea
   description: A whole area, just for text; now available in large.
@@ -109,19 +116,24 @@
     - input
     - textarea
 */
+
 .topcoat-textarea--large {
   font-size: 1.3rem;
   line-height: 1.688rem;
 }
+
 .topcoat-textarea--large:disabled {
   color: #fff;
 }
+
 .topcoat-textarea--large:disabled::-webkit-input-placeholder {
   color: #fff;
 }
+
 .topcoat-textarea--large:disabled::-moz-placeholder {
   color: #fff;
 }
+
 .topcoat-textarea--large:disabled:-ms-input-placeholder {
   color: #fff;
 }
