--- a/test/expected/mobile-dark.css
+++ b/test/expected/mobile-dark.css
@@ -15,32 +15,69 @@
 * limitations under the License.
 *
 */
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url('../font/SourceSansPro-Regular.otf');
+}
 
-.textarea,
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url('../font/SourceSansPro-Light.otf');
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url('../font/SourceSansPro-Semibold.otf');
+  font-weight: 600;
+}
+
+body {
+  font: 16px "Source Sans Pro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 400;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: hsla(200, 2%, 30%, 1);
+}
+
+:focus {
+  outline-color: transparent;
+  outline-style: none;
+}
+
 .topcoat-textarea,
 .topcoat-textarea--large {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
   padding: 0;
   margin: 0;
   font: inherit;
   color: inherit;
   background: transparent;
   border: none;
-  vertical-align: top;
-  resize: none;
-  outline: none;
 }
 
-.textarea:disabled,
+.topcoat-textarea,
+.topcoat-textarea--large {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background-clip: padding-box;
+}
+
 .topcoat-textarea:disabled,
+.topcoat-textarea--large:disabled,
 .topcoat-textarea--large:disabled {
   opacity: 0.3;
   cursor: default;
   pointer-events: none;
+}
+
+.topcoat-textarea,
+.topcoat-textarea--large {
+  vertical-align: top;
+  resize: none;
+  outline: none;
 }
 
 /* topdoc
@@ -69,33 +106,38 @@
   font-weight: 400;
   border-radius: 6px;
   line-height: 3rem;
-  border: 1px solid #333434;
-  background-color: #454646;
-  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23);
-  color: #c6c8c8;
+  border: 1px solid hsla(180, 1%, 20%, 1);
+  background-color: hsla(180, 1%, 27%, 1);
+  box-shadow: inset 0 1px 0 hsla(0, 0%, 0%, 0.23);
+  color: hsla(180, 2%, 78%, 1);
   letter-spacing: 1px;
 }
 
 .topcoat-textarea:focus,
+.topcoat-textarea--large:focus,
 .topcoat-textarea--large:focus {
-  background-color: #595b5b;
-  color: #fff;
-  border: 1px solid #0036ff;
-  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.23), 0 0 0 2px #6fb5f1;
+  background-color: hsla(180, 1%, 35%, 1);
+  color: hsla(0, 100%, 100%, 1);
+  border: 1px solid hsla(227, 100%, 50%, 1);
+  box-shadow: inset 0 1px 0 hsla(0, 0%, 0%, 0.23), 0 0 0 2px hsla(208, 82%, 69%, 1);
 }
 
-.topcoat-textarea:disabled::-webkit-input-placeholder {
-  color: #fff;
+.topcoat-textarea:disabled::-webkit-input-placeholder,
+.topcoat-textarea--large:disabled::-webkit-input-placeholder,
+.topcoat-textarea--large:disabled::-webkit-input-placeholder {
+  color: hsla(0, 100%, 100%, 1);
 }
 
-.topcoat-textarea:disabled::-moz-placeholder {
-  color: #fff;
+.topcoat-textarea:disabled::-moz-placeholder,
+.topcoat-textarea--large:disabled::-moz-placeholder,
+.topcoat-textarea--large:disabled::-moz-placeholder {
+  color: hsla(0, 100%, 100%, 1);
 }
 
-.topcoat-textarea:disabled:-ms-input-placeholder {
-  color: #fff;
+.topcoat-textarea:disabled:-ms-input-placeholder,
+.topcoat-textarea--large:disabled:-ms-input-placeholder,
+.topcoat-textarea--large:disabled:-ms-input-placeholder {
+  color: hsla(0, 100%, 100%, 1);
 }
 
 /* topdoc
@@ -123,17 +165,17 @@
 }
 
 .topcoat-textarea--large:disabled {
-  color: #fff;
+  color: hsla(0, 100%, 100%, 1);
 }
 
 .topcoat-textarea--large:disabled::-webkit-input-placeholder {
-  color: #fff;
+  color: hsla(0, 100%, 100%, 1);
 }
 
 .topcoat-textarea--large:disabled::-moz-placeholder {
-  color: #fff;
+  color: hsla(0, 100%, 100%, 1);
 }
 
 .topcoat-textarea--large:disabled:-ms-input-placeholder {
-  color: #fff;
+  color: hsla(0, 100%, 100%, 1);
 }
